--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,38 +5,38 @@ description = ""
 authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "~=3.8"
-geopy = "~=2.1"
-pandas = "~=1.3"
-scikit-learn = "~=0.24"
-Flask = "~=1.1"
-folium = "^~=0.12"
-toml = "^~=0.10"
-gunicorn = "~=20.1"
-lxml = "~=4.6"
-requests = "~=2.25"
-Flask-SQLAlchemy = "~=2.5"
-Flask-Migrate = "~=3.0"
-flask-marshmallow = "~=0.14"
-marshmallow-sqlalchemy = "~=0.26"
-dynaconf = "~=3.1"
-python-dotenv = "~=0.18"
-psycopg2-binary = "~=2.9"
-xgboost = "≃1.4"
-dash-bootstrap-components = "~=0.13"
-dash-table = "~=5.0"
+python = ">=3.8,<4.0"
+geopy = "2.*"
+pandas = "1.*"
+scikit-learn = "0.*"
+Flask = "1.*"
+folium = "^0.*"
+toml = "^0.*"
+gunicorn = "20*"
+lxml = "4.*"
+requests = "2.*"
+Flask-SQLAlchemy = "2.*"
+Flask-Migrate = "3.*"
+flask-marshmallow = "0.*"
+marshmallow-sqlalchemy = "0.*"
+dynaconf = "3.*"
+python-dotenv = "0.*"
+psycopg2-binary = "2.*"
+dash-bootstrap-components = "0.*"
+dash-table = "5.*"
 
 [tool.poetry.dev-dependencies]
-mypy = "~=0.812"
-black = "~=20.8b1"
-jupyterlab = "~=3.0"
-matplotlib = "~=3.3"
-tqdm = "~=4.62"
-plotly = "~=5.2"
-ipywidgets = "~=7.6"
-optuna = "~=2.9"
-lightgbm = "≃3.2"
-mlflow = "~=1.20.2"
+mypy = "0.*"
+black = "21.9b0"
+jupyterlab = "3.*"
+matplotlib = "3.*"
+tqdm = "4.*"
+plotly = "5.*"
+ipywidgets = "7.*"
+optuna = "2.*"
+lightgbm = "3.*"
+mlflow = "1.*"
+xgboost = "1.*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
